--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                 <img src="certificates/jugantor-testimonial.jpg" alt="Jugantor Newspaper Feature" class="cert-thumbnail">
                 <div class="cert-content">
                     <div class="cert-title">📰 National Media Recognition</div>
-                    <div class="cert-impact">Featured in Jugantor - Top 10% academic achiever among 1.8M students</div>
+                    <div class="cert-impact">Got Testimonial from Jugantor - Top 10% academic achiever among 1.8M students</div>
                     <div class="cert-description">Highlighted in major Bangladeshi newspaper for outstanding SSC performance. Public recognition of academic excellence reaching millions of readers nationwide.</div>
                 </div>
             </div>
