--- a/index.html
+++ b/index.html
@@ -541,11 +541,11 @@
 
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">3.93</div>
-                    <div class="stat-label">GPA (US Scale)</div>
+                    <div class="stat-number">4.91</div>
+                    <div class="stat-label">Cumulative GPA</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">Top 10%</div>
+                    <div class="stat-number">Top 5%</div>
                     <div class="stat-label">National Class Rank</div>
                 </div>
                 <div class="stat-item">
@@ -553,7 +553,7 @@
                     <div class="stat-label">Commonwealth Essay</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">100+</div>
+                    <div class="stat-number">30+</div>
                     <div class="stat-label">Students Mentored</div>
                 </div>
                 <div class="stat-item">
@@ -569,7 +569,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-intro fade-in">
             <h3>From Rural Bangladesh to Global Recognition</h3>
-            <p>I'm a Computer Science student with a 3.93 GPA who discovered that music and programming share the same DNA: precision, creativity, and relentless practice. Growing up in rural Bangladesh, I've mastered traditional Bengali harmonium while self-teaching Android development. My journey from village cultural competitions to international essay awards represents the bridge I aim to build between traditional heritage and modern innovation.</p>
+            <p>I'm a Computer Science student with a 4.91 GPA who discovered that music and programming share the same DNA: precision, creativity, and relentless practice. Growing up in rural Bangladesh, I've mastered traditional Bengali harmonium while self-teaching Android development. My journey from village cultural competitions to international essay awards represents the bridge I aim to build between traditional heritage and modern innovation.</p>
         </div>
 
         <div class="highlight-stats">
