--- a/index.html
+++ b/index.html
@@ -787,16 +787,16 @@
                 <img src="images/photography/rural-landscape1.jpg" alt="Golden Hour Countryside" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
                     <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Golden Hour Fields</h3>
-                    <p style="opacity: 0.8; font-size: 0.9rem;">Captured during evening prayers, showcasing the serene beauty of rural Bangladesh's agricultural landscape.</p>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Captured during afternoon prayers, showcasing the serene beauty of rural Bangladesh's agricultural landscape.</p>
                 </div>
             </div>
 
             <!-- Portrait/People Photography -->
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('people1')">
-                <img src="images/photography/rural-life1.jpg" alt="Village Life Moment" style="width: 100%; height: 250px; object-fit: cover;">
+                <img src="images/photography/dragonfly-shot.jpg" alt="Village Life Moment" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
-                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Everyday Moments</h3>
-                    <p style="opacity: 0.8; font-size: 0.9rem;">Documenting the authentic expressions and daily rhythms of rural community life.</p>
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Dragonfly Moments</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Macro photography exploring the intricate beauty of Bangladesh's diverse flora and fauna</p>
                 </div>
             </div>
 
@@ -804,37 +804,102 @@
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('culture1')">
                 <img src="images/photography/traditional-architecture.jpg" alt="Traditional Bengali Architecture" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
-                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Cultural Heritage</h3>
-                    <p style="opacity: 0.8; font-size: 0.9rem;">Traditional Bengali architecture and cultural landmarks preserving centuries of heritage.</p>
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Cultural Heritage (Mosque)</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Traditional Bengali architecture of a Mosque in a beautiful view.</p>
+                </div>
+            </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('culture1')">
+                <img src="images/photography/traditional-architecture2.jpg" alt="Traditional Bengali Architecture 2" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Cultural Heritage (Temple)</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Traditional Bengali architecture of a Buddha Temple on a beautiful day.</p>
                 </div>
             </div>
 
             <!-- Nature/Wildlife -->
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('nature1')">
-                <img src="images/photography/nature-close-up.jpg" alt="Nature Close-up" style="width: 100%; height: 250px; object-fit: cover;">
+                <img src="images/photography/river-scene1.jpg" alt="Nature Close-up" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
                     <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Natural Details</h3>
-                    <p style="opacity: 0.8; font-size: 0.9rem;">Macro photography exploring the intricate beauty of Bangladesh's diverse flora and fauna.</p>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing Bangladesh's river-dependent lifestyle and the poetry of water transportation.</p>
                 </div>
             </div>
 
             <!-- Water/Rivers -->
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
-                <img src="images/photography/river-scene.jpg" alt="River and Boats" style="width: 100%; height: 250px; object-fit: cover;">
+                <img src="images/photography/river-scene3.jpg" alt="River and Boats" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
                     <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Rivers of Life</h3>
-                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing Bangladesh's river-dependent lifestyle and the poetry of water transportation.</p>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing moments before sunset and the poetry of water transportation.</p>
                 </div>
             </div>
 
-            <!-- Street/Documentary -->
-            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('street1')">
-                <img src="images/photography/street-scene.jpg" alt="Rural Street Photography" style="width: 100%; height: 250px; object-fit: cover;">
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/river-scene4.jpg" alt="River and Boats2" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
-                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Street Stories</h3>
-                    <p style="opacity: 0.8; font-size: 0.9rem;">Documentary-style photography capturing unguarded moments and authentic rural narratives.</p>
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Sunset in Rivers</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing the moment after sunsets and the serene view.</p>
                 </div>
             </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/river-scene5.jpg" alt="River and Boats3" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Bridge With Dark Clouds</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing the terific scenic dark clouds after sunsets.</p>
+                </div>
+            </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/modern-bus-stand.jpg" alt="bus stand" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Modern Bus Stand</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing one of the most modern bus stands and its architecture.</p>
+                </div>
+            </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/sea-beach1.jpg" alt="sea beach1" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Bay of Bengal Beach</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">One of the sea beaches near the Bay of Bengal and its waves</p>
+                </div>
+            </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/sea-beach2.jpg" alt="sea beach1" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Cox's Bazar Sea Beach</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing Waves of one of the largest sea beaches of Asia.</p>
+                </div>
+            </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/cute-couple-sea.jpg" alt="love together" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Love in The Waves</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Cute couples spending quality time together between the waves.</p>
+                </div>
+            </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/young-father-daugter.jpg" alt="young-father-daugterr" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">The Princess's Steps</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">A golden hour shot of a young father helping her little princess step up.</p>
+                </div>
+            </div>
+
+            <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('water1')">
+                <img src="images/photography/sea-sunset-view.jpg" alt="sea-sunset-view" style="width: 100%; height: 250px; object-fit: cover;">
+                <div style="padding: 1.5rem;">
+                    <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Sunset of Sugondha</h3>
+                    <p style="opacity: 0.8; font-size: 0.9rem;">Capturing the diving sun in Sugondha Beach.</p>
+                </div>
+            </div>
+
+            
         </div>
 
         <!-- Photography Skills & Recognition -->
