--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 </div>
                 <div class="stat-item">
                     <div class="stat-number">Top 5%</div>
-                    <div class="stat-label">National Class Rank</div>
+                    <div class="stat-label">Class Rank</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-number">Bronze</div>
