--- a/index.html
+++ b/index.html
@@ -691,34 +691,34 @@
         <div class="grid-2">
             <div class="card fade-in">
                 <img src="app-screenshots/quizify-screens1.jpg" alt="Quizify App Screenshots" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px; margin-bottom: 1rem;">
-                <h3>🧠 Quizify - Educational Impact Platform</h3>
-                <p><strong>Real-world impact:</strong> Android quiz application helping rural students practice exam preparation. Used by 15+ local students with documented 23% improvement in average test scores.</p>
+                <h3>🧠 Quiziffy - Educational Impact Platform</h3>
+                <p><strong>Kids learning with fun:</strong> Android quiz application helping kids to improve their general knowledge in a fun way.</p>
                 <ul>
                     <li>Dynamic scoring algorithm with 20+ question categories</li>
-                    <li>SQLite database integration for progress tracking</li>
-                    <li>Addressing educational technology gap in rural Bangladesh</li>
+                    <li>Progress tracking</li>
+                    <li>Final Scoreing feature</li>
+                    <li>Fully Offline accessibility</li>
                 </ul>
                 <div class="tech-tags">
                     <span class="tech-tag">Kotlin</span>
                     <span class="tech-tag">Android Studio</span>
-                    <span class="tech-tag">SQLite</span>
                 </div>
                 <a href="https://github.com/ratuldasrudra/Quiziffy" class="btn-link">GitHub Repository</a>
             </div>
             
             <div class="card fade-in">
                 <img src="app-screenshots/jettip-screens2.jpg" alt="JetTipApp Screenshots" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px; margin-bottom: 1rem;">
-                <h3>💰 JetTipApp - Modern Mobile Solution</h3>
-                <p><strong>Community adoption:</strong> Smart tip calculator with bill splitting functionality, featured on GitHub with 50+ stars and active community usage.</p>
+                <h3>💰 Tip-Calc-App - Modern Mobile Solution</h3>
+                <p><strong>Community adoption:</strong> Smart tip calculator with bill splitting functionality, featured on GitHub.</p>
                 <ul>
                     <li>Built with Jetpack Compose and Material Design principles</li>
                     <li>Custom tip percentages and group splitting algorithms</li>
-                    <li>Downloaded and used by local business community</li>
+                    <li>Fully ofline accessibility</li>
                 </ul>
                 <div class="tech-tags">
                     <span class="tech-tag">Kotlin</span>
                     <span class="tech-tag">Jetpack Compose</span>
-                    <span class="tech-tag">Material Design</span>
+                    <span class="tech-tag">Android Studio</span>
                 </div>
                 <a href="https://github.com/ratuldasrudra/Tip-Calc-App" class="btn-link">GitHub Repository</a>
             </div>
@@ -738,36 +738,6 @@
                 </div>
             </div>
 
-            <div class="card fade-in">
-                <h3>🚀 Technical Writing & Research</h3>
-                <p><strong>Global reach:</strong> Published research articles on quantum computing and machine learning, reaching 1,250+ readers across international tech communities.</p>
-                <ul>
-                    <li>Quantum Computing: Technological Impact Analysis</li>
-                    <li>Machine Learning: Comprehensive Beginner's Guide with Python</li>
-                    <li>Articles shared across LinkedIn and Medium platforms</li>
-                </ul>
-                <div class="tech-tags">
-                    <span class="tech-tag">Technical Writing</span>
-                    <span class="tech-tag">Research Analysis</span>
-                    <span class="tech-tag">Python</span>
-                </div>
-                <a href="https://medium.com/@dasratul399" class="btn-link">Read Articles</a>
-            </div>
-
-            <div class="card fade-in">
-                <h3>🎨 Visual Arts & Photography</h3>
-                <p><strong>Self-taught mastery:</strong> Developed sketching abilities through online resources, inspired by cultural events. Photography journey began after watching "3 Idiots," focusing on rural landscapes.</p>
-                <ul>
-                    <li>Portrait studies with advanced shading techniques</li>
-                    <li>Mobile photography capturing rural Bangladesh beauty</li>
-                    <li>Showcased artwork in local competitions and exhibitions</li>
-                </ul>
-                <div class="tech-tags">
-                    <span class="tech-tag">Pencil Sketching</span>
-                    <span class="tech-tag">Mobile Photography</span>
-                    <span class="tech-tag">Visual Composition</span>
-                </div>
-            </div>
         </div>
     </section>
 
