--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ratul Das Rudra | Computer Science Student & Cultural Bridge Builder</title>
-    <meta name="description" content="Ratul Das Rudra - Top 10% Computer Science student from rural Bangladesh. Harmonium virtuoso, Android developer, and community leader bridging traditional culture with modern technology.">
+    <meta name="description" content="Ratul Das Rudra - Computer Science Innovator | Award-Winning Musician | Advocate for Rural Education">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -569,7 +569,11 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-intro fade-in">
             <h3>From Rural Bangladesh to Global Recognition</h3>
-            <p>I'm a Computer Science student with a 4.91 GPA who discovered that music and programming share the same DNA: precision, creativity, and relentless practice. Growing up in rural Bangladesh, I've mastered traditional Bengali harmonium while self-teaching Android development. My journey from village cultural competitions to international essay awards represents the bridge I aim to build between traditional heritage and modern innovation.</p>
+            <p>I am Ratul Das Rudra, an aspiring computer scientist, award-winning musician, and advocate for education access in rural Bangladesh. My journey has been shaped by resilience—whether transforming a small high school programming club into a 100+ member community, leading a cultural team to regional victories, or building Android apps that turn curiosity into practical tools.</p>
+            <p>Growing up in a rural environment with limited resources taught me to adapt, self-learn, and persist. From debugging my first quiz app late into the night to tutoring 30+ students who raised their grades against all odds, I’ve learned that technology and education can bridge opportunity gaps.</p>
+            <p>Music remains my second language. As president and lead of my cultural club, I’ve guided performances that not only won competitions but also brought people together, teaching me collaboration, leadership, and the discipline that now shapes my coding.</p>
+            <p>I am eager to continue blending creativity with technology—whether by building intuitive learning tools, contributing to inclusive communities, or harmonizing my passions in ways that create impact beyond myself</p>
+            
         </div>
 
         <div class="highlight-stats">
@@ -666,7 +670,7 @@
 
             <div class="card fade-in">
                 <h3>📚 Rural Education Advocacy</h3>
-                <div class="card-impact">30+ students tutored, average GPA improvement: 4.11 → 5.0/5</div>
+                <div class="card-impact">30+ rural students tutored, average GPA improvement: 4.11 → 5.0/5</div>
                 <p>Provided comprehensive tutoring in Math, English, Physics, and Chemistry without compensation. Developed chapter-wise study notes and innovative teaching methodologies. Demonstrated measurable impact on student academic performance in underserved community.</p>
             </div>
 
@@ -724,19 +728,22 @@
             </div>
 
             <div class="card fade-in">
-                <h3>🎵 Musical Heritage Preservation</h3>
-                <p><strong>Cultural impact:</strong> Master performer of traditional Bengali harmonium with 100+ songs including Rabindra Sangeet, Nazrul Sangeet, and Palli Geeti (folk songs).</p>
+                <img src="app-screenshots/calculator-app.jpg" alt="JetTipApp Screenshots" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px; margin-bottom: 1rem;">
+                <h3>💰 Basic-Calculator-App</h3>
+                <p><strong>Community adoption:</strong> A regular basic calculator with regular simple task functionality, featured on GitHub.</p>
                 <ul>
-                    <li>Multiple regional and national singing competition victories</li>
-                    <li>50+ junior students mentored in traditional music</li>
-                    <li>Bridging traditional Bengali culture with contemporary formats</li>
+                    <li>Built with Android Studio</li>
+                    <li>Fully ofline accessibility</li>
                 </ul>
                 <div class="tech-tags">
-                    <span class="tech-tag">Harmonium</span>
-                    <span class="tech-tag">Vocal Performance</span>
-                    <span class="tech-tag">Cultural Leadership</span>
+                    <span class="tech-tag">Kotlin</span>
+                    <span class="tech-tag">Jetpack Compose</span>
+                    <span class="tech-tag">Android Studio</span>
                 </div>
+                <a href="https://github.com/ratuldasrudra/Basic-Calculator-App" class="btn-link">GitHub Repository</a>
             </div>
+
+            
 
         </div>
     </section>
