--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-intro fade-in">
             <h3>From Rural Bangladesh to Global Recognition</h3>
-            <p>I am Ratul Das Rudra, an aspiring computer scientist, award-winning musician, and advocate for education access in rural Bangladesh. My journey has been shaped by resilience—whether transforming a small high school programming club into a 100+ member community, leading a cultural team to regional victories, or building Android apps that turn curiosity into practical tools.<br></p>
-            <p>Growing up in a rural environment with limited resources taught me to adapt, self-learn, and persist. From debugging my first quiz app late into the night to tutoring 30+ students who raised their grades against all odds, I’ve learned that technology and education can bridge opportunity gaps.<br></p>
+            <p>I am Ratul Das Rudra, an aspiring computer scientist, award-winning musician, and advocate for education access in rural Bangladesh. My journey has been shaped by resilience—whether transforming a small high school programming club into a 100+ member community, leading a cultural team to regional victories, or building Android apps that turn curiosity into practical tools.</p><br>
+            <p>Growing up in a rural environment with limited resources taught me to adapt, self-learn, and persist. From debugging my first quiz app late into the night to tutoring 30+ students who raised their grades against all odds, I’ve learned that technology and education can bridge opportunity gaps.</p><br>
             <p>Music remains my second language. As president and lead of my cultural club, I’ve guided performances that not only won competitions but also brought people together, teaching me collaboration, leadership, and the discipline that now shapes my coding.</p>
             <p>I am eager to continue blending creativity with technology—whether by building intuitive learning tools, contributing to inclusive communities, or harmonizing my passions in ways that create impact beyond myself</p>
             
