--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
             
             <!-- Sketch Card 1 -->
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('sketch1')">
-                <img src="images/sketches/Sketch1.jpg" alt="Sketch 1" style="width: 100%; height: 250px; object-fit: cover;">
+                <img src="images/sketches/sketch1.jpg" alt="Sketch 1" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
                     <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Portrait Study</h3>
                     <p style="opacity: 0.8; font-size: 0.9rem;">Exploring light and shadow through pencil work.</p>
@@ -770,7 +770,7 @@
 
             <!-- Sketch Card 2 -->
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('sketch2')">
-                <img src="images/sketches/Sketch2.jpg" alt="Sketch 2" style="width: 100%; height: 250px; object-fit: cover;">
+                <img src="images/sketches/sketch2.jpg" alt="Sketch 2" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
                     <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Nature Scene</h3>
                     <p style="opacity: 0.8; font-size: 0.9rem;">Capturing rural landscapes in graphite.</p>
@@ -779,7 +779,7 @@
 
             <!-- Sketch Card 3 -->
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('sketch3')">
-                <img src="images/sketches/Sketch3.jpg" alt="Sketch 3" style="width: 100%; height: 250px; object-fit: cover;">
+                <img src="images/sketches/sketch3.jpg" alt="Sketch 3" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
                     <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Abstract Expression</h3>
                     <p style="opacity: 0.8; font-size: 0.9rem;">Experimental forms and patterns.</p>
@@ -788,7 +788,7 @@
 
             <!-- Sketch Card 4 -->
             <div class="photo-card fade-in" style="background: rgba(255, 255, 255, 0.05); border-radius: 20px; overflow: hidden; transition: all 0.3s ease; cursor: pointer;" onclick="openPhotoModal('sketch4')">
-                <img src="images/sketches/Sketch4.jpg" alt="Sketch 4" style="width: 100%; height: 250px; object-fit: cover;">
+                <img src="images/sketches/sketch4.jpg" alt="Sketch 4" style="width: 100%; height: 250px; object-fit: cover;">
                 <div style="padding: 1.5rem;">
                     <h3 style="color: #4ECDC4; margin-bottom: 0.5rem;">Character Design</h3>
                     <p style="opacity: 0.8; font-size: 0.9rem;">Creative character illustrations.</p>
