--- a/index.html
+++ b/index.html
@@ -1042,11 +1042,11 @@
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; margin: 2rem 0;">
                 <div>
                     <h4 style="color: #4ECDC4; margin-bottom: 1rem;">Academic Profile</h4>
-                    <p style="opacity: 0.7; line-height: 1.6;">Computer Science Major<br>GPA: 3.93/4.0<br>Class Rank: Top 10%</p>
+                    <p style="opacity: 0.7; line-height: 1.6;">Computer Science Enthusiast<br>GPA: 4.91/5.0<br>Class Rank: Top 5%</p>
                 </div>
                 <div>
                     <h4 style="color: #FF6B35; margin-bottom: 1rem;">Specializations</h4>
-                    <p style="opacity: 0.7; line-height: 1.6;">Android Development<br>Cultural Technology Bridge<br>Educational Innovation</p>
+                    <p style="opacity: 0.7; line-height: 1.6;">Android Development<br>Mobile Photographer<br>Volunteer Teacher</p>
                 </div>
                 <div>
                     <h4 style="color: #FFD700; margin-bottom: 1rem;">Recognition</h4>
@@ -1057,7 +1057,6 @@
             <div style="margin: 2rem 0;">
                 <a href="https://github.com/ratuldasrudra" style="color: #4ECDC4; margin: 0 1.5rem; text-decoration: none; font-weight: 500;">GitHub</a>
                 <a href="https://www.linkedin.com/in/ratul-das-rudra2005/" style="color: #4ECDC4; margin: 0 1.5rem; text-decoration: none; font-weight: 500;">LinkedIn</a>
-                <a href="https://medium.com/@dasratul399" style="color: #4ECDC4; margin: 0 1.5rem; text-decoration: none; font-weight: 500;">Medium</a>
             </div>
             
             <p style="opacity: 0.6; margin-top: 2rem;">© 2025 Ratul Das Rudra. Portfolio designed to showcase the intersection of traditional culture and modern innovation.</p>
