--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 <img src="certificates/jsc-scholarship-2019.jpg" alt="JSC National Merit Scholarship" class="cert-thumbnail">
                 <div class="cert-content">
                     <div class="cert-title">🎓 National Merit Scholarship</div>
-                    <div class="cert-impact">Top 0.004% among 2.5 million students in Bangladesh (JSC 2019)</div>
+                    <div class="cert-impact">Top 0.004% among 2.5 million students in Bangladesh (JSC 2018; award 2019)</div>
                     <div class="cert-description">Prestigious government scholarship awarded to highest-performing students nationally. Recognition of exceptional academic achievement in highly competitive educational system.</div>
                 </div>
             </div>
@@ -733,8 +733,8 @@
 
             <div class="card fade-in">
                 <h3>🎭 Cultural Bridge Builder</h3>
-                <div class="card-impact">General Secretary of Cultural Club, 20+ team competitions won</div>
-                <p>Led school cultural programs to regional and national victories. Organized inter-school competitions with 500+ participants. Mentored 50+ junior performers, successfully bridging traditional Bengali music with contemporary performance formats.</p>
+                <div class="card-impact">General Secretary of Cultural Club, led 20+ team competitions</div>
+                <p>Led school cultural programs to regional and national victories. Organized inter-school competitions with 100+ participants. Mentored 50+ junior performers, successfully bridging traditional Bengali music with contemporary performance formats.</p>
             </div>
 
             <div class="card fade-in">
@@ -1016,7 +1016,7 @@
 
             <div class="card fade-in">
                 <h3>🌟 Cultural Documentation</h3>
-                <div class="card-impact">200+ photographs documenting rural Bengali life</div>
+                <div class="card-impact">200+ photographs documenting rural Bangladesh Beauty</div>
                 <ul>
                     <li>Participated in local photography exhibitions and contests</li>
                     <li>Created visual narrative of disappearing traditional practices</li>
