--- a/index.html
+++ b/index.html
@@ -814,6 +814,37 @@
             <p>Beyond code and music, I explore creativity through sketching. Each piece represents moments of inspiration, practice in observation, and the joy of bringing imagination to life through art forms.</p>
         </div>
 
+        <!-- Art Materials -->
+        <div class="card fade-in" style="margin-top: 2rem;">
+            <h3>🎨 Materials & Tools</h3>
+            <div class="card-impact">Sketching equipment and techniques</div>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-top: 1.5rem;">
+                <div>
+                    <h4 style="color: #4ECDC4; margin-bottom: 0.5rem;">Drawing Tools</h4>
+                    <ul>
+                        <li>Graphite pencils - Artline (HB, 2B, 4B, 6B)</li>
+                        <li>Kneaded and standard erasers</li>
+                        <li>Tissue Paper for Smooth Blending</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 style="color: #4ECDC4; margin-bottom: 0.5rem;">Paper & Surface</h4>
+                    <ul>
+                        <li>Printer paper (80GSM)</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 style="color: #4ECDC4; margin-bottom: 0.5rem;">Techniques</h4>
+                    <ul>
+                        <li>Cross-hatching and shading</li>
+                        <li>Blending with tissue</li>
+                        <li>Light and shadow studies</li>
+                        <li>Gesture and contour drawing</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <div class="photography-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; margin-top: 3rem;">
             
             <!-- Sketch Card 1 -->
@@ -872,6 +903,37 @@
         <div class="about-intro fade-in">
             <h3>Capturing Rural Bangladesh Through My Lens</h3>
             <p>Inspired by the movie "3 Idiots," I began my photography journey in 10th grade using only my mobile phone. What started as curiosity evolved into a passion for documenting the beauty of rural Bangladesh - from golden countryside landscapes to intimate moments of daily life. Each photograph tells a story of resilience, tradition, and the quiet magnificence often overlooked in rural communities.</p>
+        </div>
+
+        <!-- Photography Equipment & Settings -->
+        <div class="card fade-in" style="margin-top: 2rem;">
+            <h3>📸 Equipment & Techniques</h3>
+            <div class="card-impact">Mobile photography gear and post-processing workflow</div>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-top: 1.5rem;">
+                <div>
+                    <h4 style="color: #4ECDC4; margin-bottom: 0.5rem;">Camera Equipment</h4>
+                    <ul>
+                        <li>Smartphone: [OnePlus Nord N20 SE]</li>
+                        <li>Mobile tripod for stability</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 style="color: #4ECDC4; margin-bottom: 0.5rem;">Editing Software</h4>
+                    <ul>
+                        <li>Adobe Lightroom Mobile</li>
+                        <li>Photoshop Express for touch-ups</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 style="color: #4ECDC4; margin-bottom: 0.5rem;">Photography Style</h4>
+                    <ul>
+                        <li>Natural lighting (golden/blue hour)</li>
+                        <li>Documentary shots</li>
+                        <li>Landscape and architectural focus</li>
+                        <li>Minimal post-processing approach</li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
         <div class="photography-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem; margin-top: 3rem;">
